--- a/events/templates/new_event.html
+++ b/events/templates/new_event.html
@@ -3,8 +3,10 @@
 {% block create_event %}
 <div class="px-[2.4rem] max-w-[112rem] mx-auto mt-[12rem] mb-[4rem]">
     <h1 class="text-[2.4rem] font-bold md:text-[3.2rem] capitalize">create new event</h1>
-    <form class="mt-[3.2rem] max-w-[57.6rem]" onsubmit="">
-        <div class="[&:not(:last-child)]:mb-[3.2rem]">
+    <form class="mt-[3.2rem] max-w-[57.6rem]" onsubmit="" method="POST">
+        {% csrf_token %}
+        {{ form }}
+        {% comment %} <div class="[&:not(:last-child)]:mb-[3.2rem]">
             <label for="name" class="block capitalize mb-[.6rem]">event name</label>
             <input class="border border-blue-800 px-[.8rem] py-[.4rem] w-full focus-visible:outline focus-visible:outline-blue-700 rounded-lg" type="text" autocomplete="off" id="name" name="name" placeholder="e.g, reuniting oldies" required />
         </div>
@@ -32,9 +34,9 @@
                 <option value="drama">drama</option>
                 <option value="meetup">meetup</option>
             </select>
-        </div>
+        </div> {% endcomment %}
         <div class="[&:not(:last-child)]:mb-[3.2rem]">
-            <button class="px-[2.6rem] py-[.8rem] bg-blue-900 w-full text-white focus-visible:outline focus-visible:outline-blue-700 rounded-lg capitalize w-max cursor-pointer" type="submit">save</button>
+            <button class="px-[2.6rem] py-[.8rem] bg-blue-900 text-white focus-visible:outline focus-visible:outline-blue-700 rounded-lg capitalize w-max cursor-pointer" type="submit">save</button>
         </div>
     </form>
 </div>
