feat: added dynamic values to participant form

--- a/events/templates/participants.html
+++ b/events/templates/participants.html
@@ -11,36 +11,8 @@
     <form class="mt-[3.2rem] max-w-[57.6rem]" onsubmit="" method="POST">
         {% csrf_token %}
         {{ form }}
-        {% comment %}
-         <div class="[&:not(:last-child)]:mb-[3.2rem]">
-            <label for="name" class="block capitalize mb-[.6rem]">participant name</label>
-            <input class="border border-blue-800 px-[.8rem] py-[.4rem] w-full focus-visible:outline focus-visible:outline-blue-700 rounded-lg" type="text" autocomplete="off" id="name" name="name" placeholder="e.g, musical, drama" required />
-        </div>
         <div class="[&:not(:last-child)]:mb-[3.2rem]">
-            <label for="email" class="block capitalize mb-[.6rem]">participant email</label>
-            <input class="border border-blue-800 px-[.8rem] py-[.4rem] w-full focus-visible:outline focus-visible:outline-blue-700 rounded-lg" type="email" autocomplete="off" id="email" name="email" placeholder="e.g, john@example.com" required />
-        </div>
-        <fieldset class="[&:not(:last-child)]:mb-[3.2rem]">
-            <legend class="capitalize mb-[.6rem]">available events:</legend>
-            <div>
-                <input class="accent-blue-800" type="checkbox" id="lorem" name="lorem" />
-                <label class="capitalize" for="lorem">lorem</label>
-            </div>
-            <div>
-                <input class="accent-blue-800" type="checkbox" id="ipsum" name="ipsum" />
-                <label class="capitalize" for="ipsum">ipsum</label>
-            </div>
-            <div>
-                <input class="accent-blue-800" type="checkbox" id="dolor" name="dolor" />
-                <label class="capitalize" for="dolor">dolor</label>
-            </div>
-            <div>
-                <input class="accent-blue-800" type="checkbox" id="amet" name="amet" />
-                <label class="capitalize" for="amet">amet</label>
-            </div>
-        </fieldset> {% endcomment %}
-        <div class="[&:not(:last-child)]:mb-[3.2rem]">
-            <button class="px-[2.6rem] py-[.8rem] bg-blue-900 w-full text-white focus-visible:outline focus-visible:outline-blue-700 rounded-lg capitalize w-max cursor-pointer" type="submit">save</button>
+            <button class="px-[2.6rem] py-[.8rem] bg-blue-900 text-white focus-visible:outline focus-visible:outline-blue-700 rounded-lg capitalize w-max cursor-pointer" type="submit">save</button>
         </div>
     </form>
     <div class="mt-[4.8rem]">
@@ -52,18 +24,12 @@
                 <h4 class="capitalize text-[1.3rem] text-gray-600 px-[1.2rem]">name</h4>
                 <p class="capitalize text-[1.3rem] text-gray-600 px-[1.2rem]">email</p>
             </div>
+            {% for participant in participants %}
             <div class="grid grid-cols-2 bg-white py-[.8rem] [&:not(:last-child)]:border-b border-gray-100">
-                <p class="text-slate-900 capitalize text-[1.3rem] px-[1.2rem]">Oliver Bennett</p>
-                <p class="capitalize text-[1.3rem] text-gray-800 px-[1.2rem] break-words">oliver.bennett@emailhub.com</p>
+                <a href="#" class="text-blue-500 underline capitalize text-[1.3rem] px-[1.2rem]">{{ participant.name }}</a>
+                <p class="capitalize text-[1.3rem] text-gray-600 px-[1.2rem] break-words">{{ participant.email }}</p>
             </div>
-            <div class="grid grid-cols-2 bg-white py-[.8rem] [&:not(:last-child)]:border-b border-gray-100">
-                <p class="text-slate-900 capitalize text-[1.3rem] px-[1.2rem]">Sophie Carter</p>
-                <p class="capitalize text-[1.3rem] text-gray-800 px-[1.2rem] break-words">sophie.carter@inboxnow.co.uk</p>
-            </div>
-            <div class="grid grid-cols-2 bg-white py-[.8rem] [&:not(:last-child)]:border-b border-gray-100">
-                <p class="text-slate-900 capitalize text-[1.3rem] px-[1.2rem]">Liam Thompson</p>
-                <p class="capitalize text-[1.3rem] text-gray-800 px-[1.2rem] break-words">liam.thompson@fastmail.net</p>
-            </div>
+            {% endfor %}
         </div>
     </div>
 </div>
