--- a/events/templates/events.html
+++ b/events/templates/events.html
@@ -4,6 +4,7 @@
 <div class="px-[2.4rem] max-w-[112rem] mx-auto mt-[12rem] mb-[4rem]">
     <h1 class="text-[2.4rem] font-bold md:text-[3.2rem] capitalize">all events</h1>
     <p class="text-gray-400 text-[1.1rem]">To view details of an event, click on the name</p>
+    <p class="text-gray-600 mt-[.4rem]">Number of total events: <span class="text-gray-900">{{ num_events }}</span></p>
     <!--all events-->
     <div class="mt-[4.8rem]">
         <div class="mt-[2.4rem] rounded-md">
@@ -12,21 +13,13 @@
                 <h4 class="capitalize text-[1.3rem] text-gray-600 px-[1.2rem]">category</h4>
                 <p class="capitalize text-[1.3rem] text-gray-600 px-[1.2rem]">participants</p>
             </div>
+            {% for event in events %}
             <div class="grid grid-cols-3 bg-white py-[.8rem] [&:not(:last-child)]:border-b border-gray-100">
-                <a class="text-indigo-500 capitalize text-[1.3rem] px-[1.2rem]" href="#" title="Bijoy 71">Lorem ipsum</a>
-                <a class="capitalize text-[1.3rem] text-gray-800 px-[1.2rem]">musical</a>
-                <p class="capitalize text-[1.3rem] text-gray-800 px-[1.2rem]">1010</p>
+                <a class="text-indigo-500 capitalize text-[1.3rem] px-[1.2rem]" href="#" title="{{ event.name }}">{{ event.name }}</a>
+                <a class="capitalize text-[1.3rem] text-gray-800 px-[1.2rem]">{{ event.category.name }}</a>
+                <p class="capitalize text-[1.3rem] text-gray-800 px-[1.2rem]">{{ event.num_par }}</p>
             </div>
-            <div class="grid grid-cols-3 bg-white py-[.8rem] [&:not(:last-child)]:border-b border-gray-100">
-                <a class="text-indigo-500 capitalize text-[1.3rem] px-[1.2rem]" href="#" title="Bijoy 71">Lorem ipsum dolor sit.</a>
-                <a class="capitalize text-[1.3rem] text-gray-800 px-[1.2rem]">musical</a>
-                <p class="capitalize text-[1.3rem] text-gray-800 px-[1.2rem]">1010</p>
-            </div>
-            <div class="grid grid-cols-3 bg-white py-[.8rem] [&:not(:last-child)]:border-b border-gray-100">
-                <a class="text-indigo-500 capitalize text-[1.3rem] px-[1.2rem]" href="#" title="Bijoy 71">Lorem ipsum dolor sit amet, consectetur adipisicing.</a>
-                <a class="capitalize text-[1.3rem] text-gray-800 px-[1.2rem]">musical</a>
-                <p class="capitalize text-[1.3rem] text-gray-800 px-[1.2rem]">1010</p>
-            </div>
+            {% endfor %}
         </div>
     </div>
     <!--end of all events-->
