--- a/events/templates/categories.html
+++ b/events/templates/categories.html
@@ -1,6 +1,4 @@
-{% extends "base.html" %}
-{% block title %}Categories{% endblock title %}
-{% block categories %}
+{% extends "base.html" %} {% block title %}Categories{% endblock title %} {% block categories %}
 <div class="px-[2.4rem] max-w-[112rem] mx-auto mt-[12rem] mb-[4rem]">
     <h1 class="text-[2.4rem] font-bold md:text-[3.2rem] capitalize">create new category</h1>
     <form class="mt-[3.2rem] max-w-[57.6rem]" onsubmit="">
@@ -13,30 +11,24 @@
             <textarea class="border border-blue-800 px-[.8rem] py-[.4rem] w-full focus-visible:outline focus-visible:outline-blue-700 rounded-lg" autocomplete="off" id="desc" name="desc" placeholder="e.g, something about the category" rows="6" required></textarea>
         </div>
         <div class="[&:not(:last-child)]:mb-[3.2rem]">
-            <button class="px-[2.6rem] py-[.8rem] bg-blue-900 w-full text-white focus-visible:outline focus-visible:outline-blue-700 rounded-lg capitalize w-max cursor-pointer" type="submit">save</button>
+            <button class="px-[2.6rem] py-[.8rem] bg-blue-900 text-white focus-visible:outline focus-visible:outline-blue-700 rounded-lg capitalize w-max cursor-pointer" type="submit">save</button>
         </div>
     </form>
     <div class="mt-[4.8rem]">
         <h2 class="capitalize font-medium text-[2rem]">all categories</h2>
         <p class="text-[1.2rem] text-gray-500 mb-[2.4rem]">Click on the category name to update it</p>
-        <p class="text-gray-600 mt-[.4rem]">Number of total categories: <span class="text-gray-900">128</span></p>
+        <p class="text-gray-600 mt-[.4rem]">Number of total categories: <span class="text-gray-900">{{ number_of_categories }}</span></p>
         <div class="mt-[2.4rem] rounded-md">
             <div class="grid grid-cols-2 bg-white py-[.8rem] border-b border-gray-200">
                 <h4 class="capitalize text-[1.3rem] text-gray-600 px-[1.2rem]">name</h4>
-                <p class="capitalize text-[1.3rem] text-gray-600 px-[1.2rem]">email</p>
+                <p class="capitalize text-[1.3rem] text-gray-600 px-[1.2rem]">description</p>
             </div>
+            {% for cat in cats %}
             <div class="grid grid-cols-2 bg-white py-[.8rem] [&:not(:last-child)]:border-b border-gray-100">
-                <p class="text-slate-900 capitalize text-[1.3rem] px-[1.2rem]">Oliver Bennett</p>
-                <p class="capitalize text-[1.3rem] text-gray-800 px-[1.2rem] break-words">oliver.bennett@emailhub.com</p>
+                <a href="#" class="text-blue-500 underline capitalize text-[1.3rem] px-[1.2rem]">{{ cat.name }}</a>
+                <p class="capitalize text-[1.3rem] text-gray-800 px-[1.2rem] break-words">{{ cat.description }}</p>
             </div>
-            <div class="grid grid-cols-2 bg-white py-[.8rem] [&:not(:last-child)]:border-b border-gray-100">
-                <p class="text-slate-900 capitalize text-[1.3rem] px-[1.2rem]">Sophie Carter</p>
-                <p class="capitalize text-[1.3rem] text-gray-800 px-[1.2rem] break-words">sophie.carter@inboxnow.co.uk</p>
-            </div>
-            <div class="grid grid-cols-2 bg-white py-[.8rem] [&:not(:last-child)]:border-b border-gray-100">
-                <p class="text-slate-900 capitalize text-[1.3rem] px-[1.2rem]">Liam Thompson</p>
-                <p class="capitalize text-[1.3rem] text-gray-800 px-[1.2rem] break-words">liam.thompson@fastmail.net</p>
-            </div>
+            {% endfor %}
         </div>
     </div>
 </div>
