--- a/static/css/output.css
+++ b/static/css/output.css
@@ -649,6 +649,10 @@ video {
   margin-bottom: .6rem;
 }
 
+.mb-\[1\.6rem\] {
+  margin-bottom: 1.6rem;
+}
+
 .mb-\[2\.4rem\] {
   margin-bottom: 2.4rem;
 }
@@ -685,12 +689,28 @@ video {
   margin-top: 4.8rem;
 }
 
+.ml-\[1rem\] {
+  margin-left: 1rem;
+}
+
+.mr-\[1rem\] {
+  margin-right: 1rem;
+}
+
+.mt-\[1\.6rem\] {
+  margin-top: 1.6rem;
+}
+
 .block {
   display: block;
 }
 
 .inline-block {
   display: inline-block;
+}
+
+.inline {
+  display: inline;
 }
 
 .flex {
@@ -787,6 +807,12 @@ video {
   row-gap: .8rem;
 }
 
+.space-y-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+}
+
 .break-words {
   overflow-wrap: break-word;
 }
@@ -868,16 +894,6 @@ video {
 .bg-yellow-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(254 240 138 / var(--tw-bg-opacity, 1));
-}
-
-.bg-red-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 113 113 / var(--tw-bg-opacity, 1));
-}
-
-.bg-purple-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(147 51 234 / var(--tw-bg-opacity, 1));
 }
 
 .p-\[1rem\] {
@@ -1055,22 +1071,8 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
-.text-red-800 {
-  --tw-text-opacity: 1;
-  color: rgb(153 27 27 / var(--tw-text-opacity, 1));
-}
-
-.text-red-400 {
-  --tw-text-opacity: 1;
-  color: rgb(248 113 113 / var(--tw-text-opacity, 1));
-}
-
 .underline {
   text-decoration-line: underline;
-}
-
-.accent-blue-800 {
-  accent-color: #1e40af;
 }
 
 .filter {
