--- a/events/templates/categories.html
+++ b/events/templates/categories.html
@@ -1,17 +1,14 @@
 {% extends "base.html" %} {% block title %}Categories{% endblock title %} {% block categories %}
 <div class="px-[2.4rem] max-w-[112rem] mx-auto mt-[12rem] mb-[4rem]">
     <h1 class="text-[2.4rem] font-bold md:text-[3.2rem] capitalize">create new category</h1>
-    <form class="mt-[3.2rem] max-w-[57.6rem]" onsubmit="">
+    {% if message %}
+    {{ message }}
+    {% endif %}
+    <form class="mt-[3.2rem] max-w-[57.6rem]" onsubmit="" method="POST">
+        {% csrf_token %}
+        {{ form }}
         <div class="[&:not(:last-child)]:mb-[3.2rem]">
-            <label for="name" class="block capitalize mb-[.6rem]">category name</label>
-            <input class="border border-blue-800 px-[.8rem] py-[.4rem] w-full focus-visible:outline focus-visible:outline-blue-700 rounded-lg" type="text" autocomplete="off" id="name" name="name" placeholder="e.g, musical, drama" required />
-        </div>
-        <div class="[&:not(:last-child)]:mb-[3.2rem]">
-            <label for="desc" class="block capitalize mb-[.6rem]">category description</label>
-            <textarea class="border border-blue-800 px-[.8rem] py-[.4rem] w-full focus-visible:outline focus-visible:outline-blue-700 rounded-lg" autocomplete="off" id="desc" name="desc" placeholder="e.g, something about the category" rows="6" required></textarea>
-        </div>
-        <div class="[&:not(:last-child)]:mb-[3.2rem]">
-            <button class="px-[2.6rem] py-[.8rem] bg-blue-900 text-white focus-visible:outline focus-visible:outline-blue-700 rounded-lg capitalize w-max cursor-pointer" type="submit">save</button>
+            <button class="px-[2.6rem] mt-[2.4rem] py-[.8rem] bg-blue-900 text-white focus-visible:outline focus-visible:outline-blue-700 rounded-lg capitalize w-max cursor-pointer" type="submit">save</button>
         </div>
     </form>
     <div class="mt-[4.8rem]">
