--- a/events/templates/participants.html
+++ b/events/templates/participants.html
@@ -4,8 +4,10 @@
 <div class="px-[2.4rem] max-w-[112rem] mx-auto mt-[12rem] mb-[4rem]">
     <h1 class="text-[2.4rem] font-bold md:text-[3.2rem] capitalize">create new participant</h1>
     <div>
-        {% if message %}
+        {% if messages %}
+        {% for message in messages %}
         <p>{{ message }}</p>
+        {% endfor %}
         {% endif %}
     </div>
     <form class="mt-[3.2rem] max-w-[57.6rem]" onsubmit="" method="POST">
@@ -26,7 +28,7 @@
             </div>
             {% for participant in participants %}
             <div class="grid grid-cols-2 bg-white py-[.8rem] [&:not(:last-child)]:border-b border-gray-100">
-                <a href="#" class="text-blue-500 underline capitalize text-[1.3rem] px-[1.2rem]">{{ participant.name }}</a>
+                <a href="{% url "update-participants" participant.id %}" class="text-blue-500 underline capitalize text-[1.3rem] px-[1.2rem]">{{ participant.name }}</a>
                 <p class="capitalize text-[1.3rem] text-gray-600 px-[1.2rem] break-words">{{ participant.email }}</p>
             </div>
             {% endfor %}
