--- a/events/templates/new_event.html
+++ b/events/templates/new_event.html
@@ -2,7 +2,7 @@
 {% block title %}New Event{% endblock title %}
 {% block create_event %}
 <div class="px-[2.4rem] max-w-[112rem] mx-auto mt-[12rem] mb-[4rem]">
-    <h1 class="text-[2.4rem] font-bold md:text-[3.2rem] capitalize">create new event</h1>
+    <h1 class="text-[2.4rem] font-bold md:text-[3.2rem] capitalize">{{ heading }}</h1>
     {% if messages %}
     {% for message in messages %}
     <p>{{ message }}</p>
