--- a/events/templates/participants.html
+++ b/events/templates/participants.html
@@ -2,7 +2,7 @@
 {% block title %}Participants{% endblock title %}
 {% block participants %}
 <div class="px-[2.4rem] max-w-[112rem] mx-auto mt-[12rem] mb-[4rem]">
-    <h1 class="text-[2.4rem] font-bold md:text-[3.2rem] capitalize">create new participant</h1>
+    <h1 class="text-[2.4rem] font-bold md:text-[3.2rem] capitalize">{{ heading }}</h1>
     <div>
         {% if messages %}
         {% for message in messages %}
