feat: added search functionality

--- a/events/templates/events.html
+++ b/events/templates/events.html
@@ -4,6 +4,10 @@
 <div class="px-[2.4rem] max-w-[112rem] mx-auto mt-[12rem] mb-[4rem]">
     <h1 class="text-[2.4rem] font-bold md:text-[3.2rem] capitalize">all events</h1>
     <p class="text-gray-400 text-[1.3rem]">To view details of an event, click on the name</p>
+    <form method="GET" action="{% url 'events' %}" class="mb-[4rem]">
+        <input type="text" name="q" placeholder="Search events..." class="mt-[2.4rem] border px-[1rem] py-[.6rem] w-full max-w-[20rem] rounded-lg" value="{{ request.GET.q }}">
+        <button type="submit" class="bg-indigo-600 text-white px-[1.2rem] py-[.4rem] rounded-lg mt-[1rem]">Search</button>
+    </form>
     <p class="text-gray-600 mt-[2.4rem]">Number of total events: <span class="text-gray-900">{{ num_events }}</span></p>
     {% if messages %}
     {% for message in messages %}
@@ -11,7 +15,7 @@
     {% endfor %}
     {% endif %}
     <!--all events-->
-    <div class="mt-[4.8rem]">
+    <div class="mt-[3.2rem]">
         <div class="mt-[2.4rem] rounded-md">
             <div class="grid grid-cols-3 bg-white py-[.8rem] border-b border-gray-200">
                 <h4 class="capitalize text-[1.3rem] text-gray-600 px-[1.2rem]">name</h4>
