fix: homepage path

--- a/events/templates/dashboard.html
+++ b/events/templates/dashboard.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Home{% endblock title %}
+{% block title %}Dashboard{% endblock title %}
 {% block home %}
 <div class="px-[2.4rem] max-w-[112rem] mx-auto mt-[12rem] mb-[4rem]">
     <h1 class="text-[2.4rem] font-bold md:text-[3.2rem] capitalize">dashboard</h1>
