--- a/events/templates/events.html
+++ b/events/templates/events.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Events{% endblock title %}
+{% block title %}Home{% endblock title %}
 {% block events %}
 <div class="px-[2.4rem] max-w-[112rem] mx-auto mt-[12rem] mb-[4rem]">
     <h1 class="text-[2.4rem] font-bold md:text-[3.2rem] capitalize">all events</h1>
